avoid wrap in legend

--- a/ros_buildfarm/templates/status/css/status_page.css
+++ b/ros_buildfarm/templates/status/css/status_page.css
@@ -12,7 +12,7 @@ h2 { font-size: 1.2em; margin-bottom: 12px; }
 
 /* Top-of-page legend. */
 div.top {
-  width: 150px;
+  width: 170px;
   float: left;
   font-size: 0.8em;
   margin: 15px 30px 0 15px;
